--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>       
+    <script data-ad-client="ca-pub-2957839442633391" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <header>
         <div id='score'>
             <div id='user' class="sc"></div>
             <div id='x'>X</div>
@@ -17,16 +18,30 @@
         </div>
     </header>
 
-    <section>      
+    <section>
         <input type="button" id="ped" value="🗿" onclick="jogar(0)">
         <input type="button" id="pap" value="📜" onclick="jogar(1)"><br>
         <input type="button" id="tes" value="✂️" onclick="jogar(2)">
     </section>
-    
+
     <section id="res">
         <p id="divres"></p>
     </section>
-        
+
+    <footer>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- anucio bottom -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-2957839442633391"
+     data-ad-slot="6691893408"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+    </footer>
+
     <script src="js.js">a</script>
 </body>
 </html>
