--- a/index.html
+++ b/index.html
@@ -9,34 +9,35 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div><img src="foto.png" alt="foto" id="foto"></div>
-    <div>
-            
-        <a href="https://instagram.com/artursilvanoo" target="_blank">
-            <img src="instagramlogo.png" alt="logo instagram" class="sym">
-            <span>Instagram</span>
-        </a>
+    <div id="foto"><img src="foto.png" alt="foto"></div>
+    <main>
+        
+        <div class="container">
+            <img src="instagramlogo.png" class="sym">
+            <a href="https://instagram.com/artursilvanoo" target="_blank" rel="external">Instagram</a>
+        </div>
 
-        <a href="https://twitter.com/artursilvano" target="_blank">
-            <img src="twitterlogo.png" alt="logo twitter" class="sym">
-            <span>Twitter</span>
-        </a>
+        <div class="container">
+            <img src="twitterlogo.png" class="sym">
+            <a href="https://twitter.com/artursilvano" target="_blank" rel="external">Twitter</a>
+        </div>
 
-        <a href="https://myanimelist.net/profile/artursilvano" target="_blank">
-            <img src="MALlogo.png" alt="logo mal" class="sym">
-            <span>MyAnimeList</span>
-        </a>
 
-        <a href="https://artursilvano.github.io/jokenpo.github.io/" target="_blank">
-            <img src="moailogo.png" alt="logo moai" class="sym">
-            <span>Jo Ken Po</span>
-        </a>
+        <div class="container">
+            <img src="MALlogo.png" class="sym">
+            <a href="https://myanimelist.net/profile/artursilvano" target="_blank" rel="external">MyAnimeList</a>
+        </div>
 
-        <a href="https://github.com/artursilvano" target="_blank">
-            <img src="githublogo.png" alt="logo github" class="sym">
-            <span>GitHub</span>
-        </a>
+        <div class="container">
+            <img src="moailogo.png" class="sym">
+            <a href="https://artursilvano.github.io/jokenpo.github.io/" target="_blank" rel="external">Jo Ken Po</a>
+        </div>
 
-    </div>
+        <div class="container">
+            <img src="githublogo.png" class="sym">
+            <a href="https://github.com/artursilvano" target="_blank" rel="external">GitHub</a>
+        </div>
+
+    </main>
 </body>
 </html>
