--- a/index.html
+++ b/index.html
@@ -11,32 +11,45 @@
 <body>
     <div id="foto"><img src="foto.png" alt="foto"></div>
     <main>
-        
-        <div class="container">
-            <img src="instagramlogo.png" class="sym">
-            <a href="https://instagram.com/artursilvanoo" target="_blank" rel="external">Instagram</a>
-        </div>
+        <ul class="menu">
+            
+            <li class="list-item">
+                <a class="fa instagram" href="https://instagram.com/artursilvanoo" target="_blank" rel="external">
+                <img src="instagramlogo.png" class="sym">
+                <span>Instagram</span>
+                </a>
+            </li>
 
-        <div class="container">
-            <img src="twitterlogo.png" class="sym">
-            <a href="https://twitter.com/artursilvano" target="_blank" rel="external">Twitter</a>
-        </div>
+            <li class="list-item">
+                <a class="fa twitter" href="https://twitter.com/artursilvano" target="_blank" rel="external">
+                <img src="twitterlogo.png" class="sym">
+                <span>Twitter</span>
+                </a>
+            </li>
 
+            <li class="list-item">
+                <a class="fa mal" href="https://myanimelist.net/profile/artursilvano" target="_blank" rel="external">
+                <img src="MALlogo.png" class="sym">
+                <span>MyAnimeList</span>
+                </a>
+            </li>
 
-        <div class="container">
-            <img src="MALlogo.png" class="sym">
-            <a href="https://myanimelist.net/profile/artursilvano" target="_blank" rel="external">MyAnimeList</a>
-        </div>
+            <li class="list-item">
+                <a class="fa jokenpo" href="https://artursilvano.github.io/jokenpo.github.io/" target="_blank" rel="external">
+                <img src="moailogo.png" class="sym">
+                <span>Jo Ken Po</span>
+                </a>
+            </li>
 
-        <div class="container">
-            <img src="moailogo.png" class="sym">
-            <a href="https://artursilvano.github.io/jokenpo.github.io/" target="_blank" rel="external">Jo Ken Po</a>
-        </div>
+            <li class="list-item">
+                <a class="fa github" href="https://github.com/artursilvano" target="_blank" rel="external">
+                <img src="githublogo.png" class="sym">
+                <span>GitHub</span>
+                </a>
+            </li>
 
-        <div class="container">
-            <img src="githublogo.png" class="sym">
-            <a href="https://github.com/artursilvano" target="_blank" rel="external">GitHub</a>
-        </div>
+        </ul>
+
 
     </main>
 </body>
